--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -1,5 +1,9 @@
 {
     "presets": [
         "env"
+    ],
+    "plugins": [
+        "transform-react-jsx",
+        ["transform-class-properties", { "spec": true }]
     ]
 }
