--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -4,6 +4,7 @@
     ],
     "plugins": [
         "transform-react-jsx",
+        "transform-object-rest-spread",
         ["transform-class-properties", { "spec": true }]
     ]
 }
