--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "material-ui": "^1.0.0-beta.38",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.2.0",
     "react-device-detect": "^0.1.0",
     "react-dom": "^16.2.0",
@@ -22,11 +24,13 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.20.2",
     "webpack": "4.0.0",
     "webpack-cli": "^2.0.10"
