--- a/assets/package.json
+++ b/assets/package.json
@@ -13,13 +13,13 @@
     "react": "^16.2.0",
     "react-device-detect": "^0.1.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-slick": "^0.22.2",
     "redux": "^3.7.2",
-    "slick-carousel": "^1.8.1",
-    "react-google-maps": "^9.4.5"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -31,6 +31,7 @@
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.20.2",
     "webpack": "4.0.0",
