--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "fetch-jsonp": "^1.1.3",
     "material-ui": "^1.0.0-beta.38",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
